tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/function-sent/invalid-syntax/input.js
function* foo() {
  if (true) function.;
}
